[gd_scene load_steps=7 format=3 uid="uid://cawbllhumbm7a"]

[ext_resource type="Script" path="res://Van/Van.gd" id="1_021ww"]
[ext_resource type="Texture2D" uid="uid://brffcvyghx005" path="res://Van/Van.png" id="2_hgb0w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qbgfd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hgb0w")
}],
"loop": true,
"name": &"Drive",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0m478"]
size = Vector2(44, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koqly"]
size = Vector2(48, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_30j1c"]
radius = 278.002

[node name="Van" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_021ww")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qbgfd")
animation = &"Drive"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_0m478")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_koqly")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_30j1c")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
